src/controls/button.scss
button,
.button,
input:is([type="button"], [type="submit"], [type="reset"]) {
    width: auto;
    cursor: pointer;
    text-decoration: none;
    border: var(--border);
    border-width: calc(var(--border-width) * 2);
    font-weight: 600;
    text-shadow: var(--text-shadow);

    &:is(:disabled, .disabled) {
        opacity: .5;
        pointer-events: none;
    }

    color: var(--color-secondary-inverse);
    border-color: var(--color-secondary);
    background-color: var(--color-secondary);

    &:is(:hover, :focus) {
        border-color: var(--color-secondary-focus);
        background-color: var(--color-secondary-focus);
    }

    &:is(:active, .active) {
        box-shadow: inset var(--box-shadow);
        transform: translateY(.05rem);
    }

    &.danger {
        color: var(--color-danger-inverse);
        border-color: var(--color-danger);
        background-color: var(--color-danger);

        &:is(:hover, :focus) {
            border-color: var(--color-danger-focus);
            background-color: var(--color-danger-focus);
        }
    }

    &.success {
        color: var(--color-success-inverse);
        border-color: var(--color-success);
        background-color: var(--color-success);

        &:is(:hover, :focus) {
            border-color: var(--color-success-focus);
            background-color: var(--color-success-focus);
        }
    }

    &.icon {
        border-radius: 50%;
        background-color: var(--color-background);

        &::before {
            position: relative;
            z-index: 1;
            mask-size: 1rem;
            -webkit-mask-size: 1rem;
        }

        &::after {
            content: "";
            position: relative;
            bottom: 100%;
            display: block;
            width: 100%;
            height: 100%;
            background-color: var(--color-background);
        }

        &:is(:hover, :focus)::after {
            background-color: var(--color-secondary);
        }
    }
}

:is(button, input)[type="submit"] {
    color: var(--color-primary-inverse);
    border-color: var(--color-primary);
    background-color: var(--color-primary);

    &:is(:hover, :focus) {
        border-color: var(--color-primary-focus);
        background-color: var(--color-primary-focus);
    }
}

